--- a/index.html
+++ b/index.html
@@ -15,5 +15,5 @@
     </div>
     <div class="container"></div>
   </body>
-  <script src="/bundle.js"></script>
+  <script src="bundle.js"></script>
 </html>
